--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            original:fuga_color="#ff00ff00"
+            original:ball_color="#ff00ff00"
     />
 
 </android.support.constraint.ConstraintLayout>
